Added ssl certificate; http forwards to https.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://153.91.152.245:3306/seniorproject
 spring.datasource.username=seniorproject
 spring.datasource.password=thisisnotafakepassword
+
+server.port=8443
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=1234567890
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=tomcat
