Add error handling and date creation for generating pin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=1234567890
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=tomcat
+
+# In minutes
+expire-time=20
